<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="name_placeholder">Arnab Kar</string>
    <string name="work_in_progress">Work in Progress</string>
    <string name="action">Action</string>
    <string name="manual_call_perm_request">Give call permissions manually</string>
    <string name="no_contacts_subheading">Go out and make some friends</string>
    <string name="add_contact">Add Contact</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="preview">Preview</string>

    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="notes">Notes</string>

    <string name="contact">Contacts</string>
    <string name="themes">Themes</string>
    <string name="help_feedback">Help &amp; Feedback</string>


</resources>
