<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_phone_24dp"
            android:iconTint="@color/colorPrimary"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_themes"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/themes" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/help_feedback" />
    </group>
</menu>