<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:contentDescription="Create New Contact"
            android:foregroundTint="?attr/colorAccent"
            app:srcCompat="@drawable/ic_add_24dp" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/emptyContacts"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/image_placeholder"
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_marginStart="8dp"
                        android:clipChildren="true"
                        android:clipToPadding="true"
                        app:cardCornerRadius="23dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/emptyHeading">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:src="@drawable/ic_person_24dp"
                            app:tint="#b5b5b5" />
                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/emptyHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/app_name"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.8"
                        app:layout_constraintStart_toEndOf="@+id/image_placeholder"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/preview"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@+id/emptyHeading"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@+id/emptyHeading"
                        app:layout_constraintTop_toBottomOf="@+id/emptyHeading" />

                    <TextView
                        android:id="@+id/subHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="17dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/no_contacts_subheading"
                        android:textSize="15sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/preview" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.kararnab.contacts.widgets.EmptyRecyclerView
                    android:id="@+id/rvContacts"
                    tools:listitem="@layout/contact_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </FrameLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>