<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:stateListAnimator="@animator/toolbar_elevation"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </android.support.design.widget.AppBarLayout>
        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/fab_margin"
                android:foregroundTint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_add_24dp" />
            <android.support.v4.widget.SwipeRefreshLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/swipeRefreshContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/emptyContacts"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" >

                        <android.support.v7.widget.CardView
                            android:id="@+id/image_placeholder"
                            android:layout_width="46dp"
                            android:layout_height="46dp"
                            android:layout_marginStart="8dp"
                            android:clipChildren="true"
                            android:clipToPadding="true"
                            app:cardCornerRadius="23dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/emptyHeading">

                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="5dp"
                                android:tint="#b5b5b5"
                                android:src="@drawable/ic_person_24dp" />
                        </android.support.v7.widget.CardView>

                        <TextView
                            android:id="@+id/emptyHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/app_name"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toEndOf="@+id/image_placeholder"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/preview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/preview"
                            android:textSize="12sp"
                            app:layout_constraintEnd_toEndOf="@+id/emptyHeading"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toStartOf="@+id/emptyHeading"
                            app:layout_constraintTop_toBottomOf="@+id/emptyHeading" />

                        <TextView
                            android:id="@+id/subHeading"
                            android:layout_width="wrap_content"
                            android:layout_height="17dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/no_contacts_subheading"
                            android:textSize="15sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.38"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/preview" />
                    </android.support.constraint.ConstraintLayout>
                    <com.kararnab.contacts.widgets.EmptyRecyclerView
                        android:id="@+id/rvContacts"
                        tools:listitem="@layout/contact_item"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </FrameLayout>

            </android.support.v4.widget.SwipeRefreshLayout>
        </android.support.design.widget.CoordinatorLayout>


    </LinearLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu_drawer_main"
        android:fitsSystemWindows="false" >
        <!--<include layout="@layout/drawer_main"/>-->
    </android.support.design.widget.NavigationView>


</android.support.v4.widget.DrawerLayout>